--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
   <div class="app">
     <canvas id="canvas"></canvas>
   </div>
+  <script src="cordova.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
